Styling Header.css

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -24,9 +24,9 @@ a {
 }
 
 .HeroGroup {
-  margin: 0 auto;
+  margin: auto;
   max-width: 500px;
-  padding: 150px 50px;
+  padding: 200px 50px;
   text-align: center;
 }
 
