--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,9 +8,35 @@
 
 .HeaderGroup {
   max-width: 800px;
-  margin: 0 auto;
+  margin: auto;
   display: grid;
   grid-template-columns: repeat(5, auto);
   /* grid-template-columns: auto auto auto auto auto; Another way */
   align-items: center;
+  justify-items: center;
+}
+
+.Header a {
+  color: white;
+  font-weight: 700;
+}
+
+.Header button {
+  padding: 8px 20px;
+  font-size: 20px;
+  background: #e4ad6f;
+  border: none;
+  font-weight: 700;
+  border-radius: 10px;
+  outline: none;
+  cursor: pointer;
+}
+
+@media (max-width: 600px) {
+  .Header {
+    padding: 15px 0;
+  }
+  .HeaderGroup {
+    grid-template-columns: repeat(4, auto);
+  }
 }
