--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -32,11 +32,14 @@
   cursor: pointer;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 640px) {
   .Header {
     padding: 15px 0;
   }
   .HeaderGroup {
     grid-template-columns: repeat(4, auto);
+  }
+  .Header a:nth-child(4) {
+    display: none;
   }
 }
