--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -30,6 +30,15 @@
   border-radius: 10px;
   outline: none;
   cursor: pointer;
+  transition: 1s;
+}
+
+.Header button:hover {
+  background: white;
+  color: black;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+  transform: translateY(-3px);
+  transition: 1s cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
 @media (max-width: 640px) {
