--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -24,10 +24,10 @@
 .Header button {
   padding: 8px 20px;
   font-size: 20px;
-  background: #e4ad6f;
+  background: #92d0ff;
   border: none;
   font-weight: 700;
-  border-radius: 10px;
+  border-radius: 20px;
   outline: none;
   cursor: pointer;
   transition: 1s;
@@ -48,7 +48,7 @@
   .HeaderGroup {
     grid-template-columns: repeat(4, auto);
   }
-  .Header a:nth-child(4) {
+  .Header a:nth-child(5) {
     display: none;
   }
 }
