--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,7 +3,14 @@
   width: 100%;
   padding: 50px 0;
   z-index: 100;
+  transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
   /* background: black; */
+}
+
+.HeaderScrolled {
+  background: rgba(0, 0, 0, 0.6);
+  padding: 25px 0;
+  backdrop-filter: blur(20px);
 }
 
 .HeaderGroup {
